// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extendMarkupWithSharedTableData() should return correct markup for advanced example 1`] = `
<script>
  const getHeadAndData = () => {

    const headAdvanced = [{
      "name": "Model",
      "id": "model"
    }, {
      "name": "Interest",
      "id": "interest",
      "active": true,
      "direction": "asc"
    }, {
      "name": "VIN",
      "id": "vin",
      "active": false,
      "direction": "asc"
    }, {
      "name": "Purchase Intention",
      "id": "purchaseIntention",
      "active": false,
      "direction": "asc"
    }, {
      "name": "Status",
      "id": "status",
      "active": false,
      "direction": "asc"
    }, {
      "name": "Comment",
      "id": "comment"
    }, {
      "name": "Lead ID",
      "id": "leadId",
      "active": false,
      "direction": "asc"
    }, {
      "name": "Action",
      "id": "action",
      "hideLabel": true
    }];
    const dataAdvanced = [{
      "imageUrl": "https://nav.porsche.com/00BC524/series-assets/1366/718@2x.jpg",
      "model": "718 Cayman",
      "date": "23.06.2021",
      "interest": "New Car",
      "vin": "1FM5K7F84FGB16304",
      "purchaseIntention": "08/2021",
      "status": "Won",
      "comment": "-",
      "leadId": "0000824402"
    }, {
      "imageUrl": "https://nav.porsche.com/00BC524/series-assets/1366/panamera@2x.jpg",
      "model": "Panamera 4S",
      "date": "19.06.2021",
      "interest": "New Car",
      "vin": "2GCEC13T141374801",
      "purchaseIntention": "11/2021",
      "status": "Lost",
      "comment": "Some multiline text and a column with a min width.",
      "leadId": "0000824409"
    }, {
      "imageUrl": "https://nav.porsche.com/00BC524/series-assets/1366/911@2x.jpg",
      "model": "911 Carrera S",
      "date": "19.05.2021",
      "interest": "Used Car",
      "vin": "5GAKVCKD8EJ335750",
      "purchaseIntention": "09/2021",
      "status": "Won",
      "comment": "-",
      "leadId": "0000824408"
    }, {
      "imageUrl": "https://nav.porsche.com/00BC524/series-assets/1366/macan@2x.jpg",
      "model": "Macan Turbo",
      "date": "10.05.2021",
      "interest": "Used Car",
      "vin": "1FMPU17L83LC09302",
      "purchaseIntention": "07/2021",
      "status": "Lost",
      "comment": "-",
      "leadId": "0000824407"
    }, {
      "imageUrl": "https://nav.porsche.com/00BC524/series-assets/768/taycan@2x.jpg",
      "model": "Taycan",
      "date": "03.05.2021",
      "interest": "New Car",
      "vin": "JN1BY1AR3BM375187",
      "purchaseIntention": "05/2021",
      "status": "Won",
      "comment": "-",
      "leadId": "0000824406"
    }];

    return {
      headAdvanced,
      dataAdvanced
    };
  };
  (async () => {
        const {
          headAdvanced,
          dataAdvanced
        } = await getHeadAndData();

        const renderTableHeadRow = (items) =>
`;

exports[`extendMarkupWithSharedTableData() should return correct markup for basic example 1`] = `
<script>
  const getHeadAndData = () => {

    const headBasic = ["Model", "Date", "Purchase Intention", "Status", "Lead ID"];
    const dataBasic = [{
      "model": "718 Cayman",
      "date": "23.06.2021",
      "interest": "New Car",
      "status": "Won",
      "leadId": "0000824402"
    }, {
      "model": "Panamera 4S",
      "date": "19.06.2021",
      "interest": "New Car",
      "status": "Lost",
      "leadId": "0000824409"
    }, {
      "model": "911 Carrera S",
      "date": "19.05.2021",
      "interest": "Used Car",
      "status": "Won",
      "leadId": "0000824408"
    }, {
      "model": "Macan Turbo",
      "date": "10.05.2021",
      "interest": "Used Car",
      "status": "Lost",
      "leadId": "0000824407"
    }, {
      "model": "Taycan",
      "date": "03.05.2021",
      "interest": "New Car",
      "status": "Won",
      "leadId": "0000824406"
    }];

    return {
      headBasic,
      dataBasic
    };
  };
  (async () => {
        const {
          headBasic,
          dataBasic
        } = await getHeadAndData();

        const renderTableHeadRow = (items) =>
`;

exports[`extendMarkupWithSharedTableData() should return correct markup for sorting example 1`] = `
<script>
  const getHeadAndData = () => {

    const headSorting = [{
      "name": "Column 1",
      "id": "col1",
      "active": false,
      "direction": "asc"
    }, {
      "name": "Column 2",
      "id": "col2",
      "active": true,
      "direction": "asc"
    }, {
      "name": "Column 3",
      "id": "col3",
      "active": false,
      "direction": "asc"
    }];
    const dataSorting = [{
      "col1": "Name A",
      "col2": "9",
      "col3": "01.06.2021"
    }, {
      "col1": "Name Z",
      "col2": "1",
      "col3": "24.06.2021"
    }];

    return {
      headSorting,
      dataSorting
    };
  };
  (async () => {
        const {
          headSorting,
          dataSorting
        } = await getHeadAndData();

        const renderTableHeadRow = (items) =>
`;

exports[`getIndexJsMarkup() should return correct markup without additionalDependency "IMask" 1`] = `
"import './style.css'
import * as porscheDesignSystem from '@porsche-design-system/components-js'
import IMask from 'imask';
IMask

porscheDesignSystem.load();
"
`;

exports[`getIndexJsMarkup() should return correct markup without additionlDependency 1`] = `
"import './style.css'
import * as porscheDesignSystem from '@porsche-design-system/components-js'


porscheDesignSystem.load();
"
`;

exports[`getVanillaJsDependencies() should return correct dependencies without additionalDependencies 1`] = `
Object {
  "@porsche-design-system/components-js": "2.14.0-beta.0",
}
`;

exports[`getVanillaJsDependencies() should return correct markup with additionalDependency "IMask" 1`] = `
Object {
  "@porsche-design-system/components-js": "2.14.0-beta.0",
  "imask": "^6.4.2",
}
`;
